2009-06-08  Jakub Jelinek  <jakub@redhat.com>

	PR c++/40373
	* g++.dg/template/dtor7.C: New test.

	PR c++/40370
	PR c++/40372
	* g++.dg/template/error41.C: New test.
	* g++.dg/template/error42.C: New test.

2009-06-07  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-06-03  Richard Guenther  <rguenther@suse.de>

	PR middle-end/40328
	* gcc.dg/torture/pr40328.c: New testcase.

2009-06-07  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-06-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/32950
	* g++.dg/torture/pr32950.C: New.

2009-06-05  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/40340
	* gcc.dg/pr40340-1.c: New test.
	* gcc.dg/pr40340-2.c: New test.
	* gcc.dg/pr40340-3.c: New test.
	* gcc.dg/pr40340-4.c: New test.
	* gcc.dg/pr40340-5.c: New test.
	* gcc.dg/pr40340.h: New file.

2009-06-04  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/39893
	* gfortran.dg/assumed_charlen_dummy.f90: New Test.

2009-06-04  Richard Guenther  <rguenther@suse.de>

	PR c++/39371
	* g++.dg/torture/pr40335.C: New testcase.

2009-06-03  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/40019
	* gfortran.dg/leadz_trailz_1.f90: New test.
	* gfortran.dg/leadz_trailz_2.f90: New test.

2009-06-02  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/initlist13.C: Remove expected error.
	* g++.dg/cpp0x/initlist18.C: New.
	* g++.dg/cpp0x/initlist19.C: New.

	* g++.dg/cpp0x/auto14.C: New.

2009-05-30  H.J. Lu  <hongjiu.lu@intel.com>

	* g++.dg/template/typedef19.C: XFAIL.
	* g++.dg/template/typedef20.C: Likewise.

2009-05-30  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:

	2009-05-28  Dodji Seketeli  <dodji@redhat.com>

	PR c++/39754
	* g++.dg/template/canon-type-1.C: New test.
	* g++.dg/template/canon-type-2.C: Likewise.
	* g++.dg/template/canon-type-3.C: Likewise.
	* g++.dg/template/canon-type-4.C: Likewise.
	* g++.dg/template/canon-type-5.C: Likewise.
	* g++.dg/template/canon-type-6.C: Likewise.